# kuzzle-sdk-rust

./: .http_routes.json  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: kuzzle.rs  lib.rs
src/controllers/: auth.rs  bulk.rs  collection.rs  document.rs  index.rs  memory_storage.rs  mod.rs  realtime.rs  security.rs  server.rs
src/event_emitter/: event_emitter.rs  mod.rs
src/protocols/: http.rs  mod.rs  protocol.rs  websocket.rs
src/types/: errors.rs  mod.rs  options.rs  request.rs  response.rs
