[package]
name = "kuzzle_sdk"
version = "0.1.0"
authors = ["Alexandre Bouthinon <bouthinon.alexandre@gmail.com>"]
license = "MIT"
edition = '2018'

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
reqwest = "^0.9.4"

[dev-dependencies]
mockito = "^0.15.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
